--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
        }
     </style>
   </head>
+  <body>
   <p>Find Your Nearest Toilet.</p>
 
   <button onclick="getLocation()">Get Your Location</button>
@@ -23,56 +24,56 @@
       } else {
           x.innerHTML = "Geolocation is not supported by this browser.";
       }
-  }
 
-</script>
+      var locations = new Array();
+    function initMap(position) {
+      var uluru = {lat: position.coords.latitude, lng: position.coords.longitude};
+      var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 14,
+        center: uluru
+      });
+      var marker = new google.maps.Marker({
+              position: uluru,
+              icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png',
+              map: map
+          });
+      $.ajax({
+          type: 'POST',
+          url: '/api/map/route/',
+          data: JSON.stringify(uluru), // or JSON.stringify ({name: 'jonas'}),
+          success: function(data) {
+              {#console.log(data['location']);#}
+              var loc =  data['location']
+              for(var i in loc){
+                  locations.push(loc[i]);
+                  if (i == 1) {
+                    var marker = new google.maps.Marker({
+                    position: loc[i],
+                    animation: google.maps.Animation.DROP,
+                    icon: 'http://maps.google.com/mapfiles/ms/icons/green-dot.png',
+                    map: map
+                  });
+                }
+                  else {
+                  var marker = new google.maps.Marker({
+                  position: loc[i],
+                  animation: google.maps.Animation.DROP,
+                  icon: 'http://maps.google.com/mapfiles/ms/icons/red-dot.png',
+                  map: map
+                  });
+                }
+              }
+              console.log(locations);
+          },
+          contentType: "application/json",
+          dataType: 'json'
+      });
+    }
+  }
+  </script>
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
     <h3>My Google Maps Demo</h3>
     <div id="map"></div>
-    <script>
-        var locations = new Array();
-      function initMap(position) {
-        var uluru = {lat: position.coords.latitude, lng: position.coords.longitude};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 14,
-          center: uluru
-        });
-        var marker = new google.maps.Marker({
-                position: uluru,
-                icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png',
-                map: map
-            });
-        $.ajax({
-            type: 'POST',
-            url: '/api/map/route/',
-            data: JSON.stringify(uluru), // or JSON.stringify ({name: 'jonas'}),
-            success: function(data) {
-                {#console.log(data['location']);#}
-                var loc =  data['location']
-                for(var i in loc){
-                    locations.push(loc[i]);
-                    if (i == 1) {
-                      var marker = new google.maps.Marker({
-                      position: loc[i],
-                      icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png',
-                      map: map
-                    });
-                  }
-                    else {
-                    var marker = new google.maps.Marker({
-                    position: loc[i],
-                    icon: 'http://maps.google.com/mapfiles/ms/icons/red-dot.png',
-                    map: map
-                    });
-                  }
-                }
-                console.log(locations);
-            },
-            contentType: "application/json",
-            dataType: 'json'
-        });
-      }
-    </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiixzz0CeP42DEUZOCY9abZVk8kbIB6Bo&callback=initMap">
   </script>
