--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,6 @@
           url: '/api/map/route/',
           data: JSON.stringify(uluru), // or JSON.stringify ({name: 'jonas'}),
           success: function(data) {
-              {#console.log(data['location']);#}
               var loc =  data['location']
               var infoWindow = new google.maps.InfoWindow();
               for(var i in loc){
@@ -67,8 +66,16 @@
                   });
                   google.maps.event.addListener(marker, 'click', (function(marker, i) {
             return function() {
-                infoWindow.setContent("Testing Information");
-                infoWindow.open(map, marker);
+
+                $.ajax({
+                    type: 'GET',
+                    url: '/api/user/get_review/',
+                    success: function(data) {
+                        console.log(data);
+                        infoWindow.setContent(JSON.stringify(data));
+                        infoWindow.open(map, marker);
+                    }
+                });
             }
         })(marker, i));
                 }
