Add info dynamic content

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,7 @@
           data: JSON.stringify(uluru), // or JSON.stringify ({name: 'jonas'}),
           success: function(data) {
               var loc =  data['location']
+              var place_ids = data['place_id']
               var infoWindow = new google.maps.InfoWindow();
               for(var i in loc){
                   locations.push(loc[i]);
@@ -66,10 +67,11 @@
                   });
                   google.maps.event.addListener(marker, 'click', (function(marker, i) {
             return function() {
-
+                data = {'place_id':place_ids[i]}
                 $.ajax({
-                    type: 'GET',
+                    type: 'POST',
                     url: '/api/user/get_review/',
+                    data: JSON.stringify(data),
                     success: function(data) {
                         console.log(data);
                         infoWindow.setContent(JSON.stringify(data));
@@ -88,8 +90,17 @@
               });
               google.maps.event.addListener(marker, 'click', (function(marker, i) {
         return function() {
-            infoWindow.setContent("Testing Information");
-            infoWindow.open(map, marker);
+            data = {'place_id':place_ids[i]}
+                $.ajax({
+                    type: 'POST',
+                    url: '/api/user/get_review/',
+                    data: JSON.stringify(data),
+                    success: function(data) {
+                        console.log(data);
+                        infoWindow.setContent(JSON.stringify(data));
+                        infoWindow.open(map, marker);
+                    }
+                });
         }
     })(marker, i));
         }
