Final proto type

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
        #map {
         height: 400px;
         width: 100%;
        }
+       * {
+    box-sizing: border-box;
+}
+body {
+  margin: 0;
+}
+.header {
+    background-color: #201B1A;
+    padding: 20px;
+    text-align: center;
+}
     </style>
   </head>
   <body>
-    <p id="mapping"></p>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <b><span id=stars></span></b>
+    <div style="width:100%;">
+    <div class="header">
+        <h1><font color="#fffffff">Swachh Public Toilet Locator</font></h1>
+</div>
+   <p id="mapping"></p>
     <script>
     var x = document.getElementById("mapping");
     function initMap() {
@@ -20,21 +42,41 @@
     });
   }
   </script>
-  <p>Find Your Nearest Toilet.</p>
-
-  <button onclick="getLocation()">Get Your Location</button>
-  <p id="demo"></p>
-
+  <div style="float:left; width:80%;"><br><br><br>
+    <div id="map"></div>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiixzz0CeP42DEUZOCY9abZVk8kbIB6Bo&callback=initMap">
+  </script>
+</div>
+  <div style="float:right; width:20%;">
+<center><br><br><br><button onclick="getLocation()">Get Your Location</button><center>
+</div>
+</div>
+<p id="demo"></p>
+  <script>
+  function getStars(rating) {
+    // Round to nearest half
+    rating = Math.round(rating * 2) / 2;
+    let output = [];
+    // Append all the filled whole stars
+    for (var i = rating; i >= 1; i--)
+      output.push('<i class="fa fa-star" aria-hidden="true" style="color: gold;"></i>&nbsp;');
+    // If there is a half a star, append it
+    if (i == .5) output.push('<i class="fa fa-star-half-o" aria-hidden="true" style="color: gold;"></i>&nbsp;');
+    // Fill the empty stars
+    for (let i = (5 - rating); i >= 1; i--)
+      output.push('<i class="fa fa-star-o" aria-hidden="true" style="color: gold;"></i>&nbsp;');
+    return output.join('');
+  }
+  </script>
   <script>
   var x = document.getElementById("demo");
-
   function getLocation() {
       if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(initMap);
       } else {
           x.innerHTML = "Geolocation is not supported by this browser.";
       }
-
       var locations = new Array();
     function initMap(position) {
       var uluru = {lat: position.coords.latitude, lng: position.coords.longitude};
@@ -47,7 +89,6 @@
               icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png',
               map: map
           });
-
       $.ajax({
           type: 'POST',
           url: '/api/map/route/',
@@ -55,6 +96,7 @@
           success: function(data) {
               var loc =  data['location']
               var place_ids = data['place_id']
+              var address_list = data['address_list']
               var infoWindow = new google.maps.InfoWindow();
               for(var i in loc){
                   locations.push(loc[i]);
@@ -67,14 +109,24 @@
                   });
                   google.maps.event.addListener(marker, 'click', (function(marker, i) {
             return function() {
-                data = {'place_id':place_ids[i]}
+                send_data = {'place_id':place_ids[i]}
                 $.ajax({
                     type: 'POST',
                     url: '/api/user/get_review/',
-                    data: JSON.stringify(data),
+                    data: JSON.stringify(send_data),
                     success: function(data) {
+                      var rating = data['data'];
+                      console.log(rating);
+                      var content = '<div id="content">'+
+      '<div id="siteNotice">'+
+      '</div>'+
+      '<h3 id="firstHeading" class="firstHeading">Swachh Public Toilet</h3>'+ '<div id="bodyContent">' + '<p><b>Address </p></b>' + address_list[i] + '</div>'+
+      '<div id="bodyContent">'+ '<br>' + '<table><tr><td>'+
+      '<center><p><b>Review </b></p>' + rating['review'] + '<center></td>' + '<td>' + '<center><p><b>Rating </b></p>' + getStars(rating['rating']) + '</center></td></tr></table>'
+      +'</div>'+
+      '</div>'+'<br><center><a href="/user" class="btn btn-info" role="button">Link Button</a></center>';
                         console.log(data);
-                        infoWindow.setContent(JSON.stringify(data));
+                        infoWindow.setContent(content);
                         infoWindow.open(map, marker);
                     }
                 });
@@ -96,8 +148,17 @@
                     url: '/api/user/get_review/',
                     data: JSON.stringify(data),
                     success: function(data) {
+                      var rating = data['data'];
                         console.log(data);
-                        infoWindow.setContent(JSON.stringify(data));
+                        var content = '<div id="content">'+
+        '<div id="siteNotice">'+
+        '</div>'+
+        '<h3 id="firstHeading" class="firstHeading">Swachh Public Toilet</h3>'+ '<p><b>Address </p></b>' + address_list[i] + '</div>'+
+        '<div id="bodyContent">'+'<br>'+'<table><tr><td>'+
+        '<center><p><b>Review </b></p>' + rating['review']+'</center></td>' + '<td>'+'<center><p><b>Rating </b></p>' + getStars(rating['rating']) + '</center></td></tr></table>'
+        +'</div>'+
+        '</div>'+'<br><center><a href="/user" class="btn btn-info" role="button">Link Button</a></center>';
+                        infoWindow.setContent(content);
                         infoWindow.open(map, marker);
                     }
                 });
@@ -114,10 +175,5 @@
   }
   </script>
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <h3>My Google Maps Demo</h3>
-    <div id="map"></div>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiixzz0CeP42DEUZOCY9abZVk8kbIB6Bo&callback=initMap">
-  </script>
   </body>
 </html>
